--- a/games.html
+++ b/games.html
@@ -18,8 +18,48 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
 
+  <h1 text-align="center">Games</h1>
+  
+    <div class="card" style="width: 18rem;">
+        <img src="img/apps.21507.13663857844271189.4c1de202-3961-4c40-a0aa-7f4f1388775a.20ed7782-0eda-4f9d-b421-4cc47492edc6" class="card-img-top" alt="valorant">
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <img src="img/tjhex9ba2umc1.jpeg" class="card-img-top" alt="rocket league">
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <img src="img/61fbAY1DZZL.jpg" class="card-img-top" alt="league">
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <img src="img/MV5BMmYyNDE3NWUtOGU4ZS00M2FiLThkYTQtZjNmZDJmMmIyZTdkXkEyXkFqcGc@._V1_.jpg" class="card-img-top" alt="Overcooked">
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <img src="img/MV5BMmYyNDE3NWUtOGU4ZS00M2FiLThkYTQtZjNmZDJmMmIyZTdkXkEyXkFqcGc@._V1_.jpg" class="card-img-top" alt="Splatoon 3">
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <img src="img/MV5BMmYyNDE3NWUtOGU4ZS00M2FiLThkYTQtZjNmZDJmMmIyZTdkXkEyXkFqcGc@._V1_.jpg" class="card-img-top" alt="Super Smash Bros">
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <img src="img/images.jpg class="card-img-top" alt="Street Fighter 6">
+        </div>
+      </div>
+
+      <div class="card" style="width: 18rem;">
+        <img src="img/MV5BMmYyNDE3NWUtOGU4ZS00M2FiLThkYTQtZjNmZDJmMmIyZTdkXkEyXkFqcGc@._V1_.jpg" class="card-img-top" alt="Chess">
+        </div>
+      </div>
 
 
 
