finished games page

--- a/index.html
+++ b/index.html
@@ -18,8 +18,41 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="container-fluid">
+    <nav id="navbar-background" class="navbar fixed-top navbar-expand-md">
+      <div class="topnav container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-container"
+          aria-controls="#navbar-container" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse d-flex justify-content-center align-items-center" id="navbar-container">
+          <ul class="navbar-nav d-flex justify-content-center align-items-center">
+            <div class="skeuomorphic-buttons-navbar default-text-box me-md-1 me-lg-4 heading-size-change">
+              <a class="skeuomorphic-buttons heading-size-change" href="meetings.html">MEETINGS</a>
+            </div>
+            <div class="skeuomorphic-buttons-navbar default-text-box me-1 me-md-1 ms-md-1 ms-lg-4 me-lg-4 heading-size-change">
+              <a class="skeuomorphic-buttons heading-size-change" href="members.html">MEMBERS</a>
+            </div>
+            <div class="skeuomorphic-buttons-navbar default-text-box me-1 me-md-1 ms-md-1 ms-lg-4 me-lg-4 heading-size-change">
+              <a class="skeuomorphic-buttons heading-size-change" href="games.html">GAMES</a>
+            </div>
+            <div class="skeuomorphic-buttons-navbar default-text-box ms-md-1 ms-lg-4 heading-size-change" >
+              <a class="skeuomorphic-buttons heading-size-change" href="contact.html">CONTACTS</a>
+            </div>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <div class="container-fluid">
+    <div class="row d-flex justify-content-center align-items-center" id="Homepage">
+      <div class="col d-flex justify-content-center align-items-center">
+        <img class="esports-logo" src="img/TEC_Color_2 1.png" alt="Esports Club">
+      </div>
+    </div>
+  </div>
 
-    
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
