--- a/games.html
+++ b/games.html
@@ -19,49 +19,74 @@
 </head>
 <body>
 
-  <h1 text-align="center">Games</h1>
+  <h1 style="text-align: center;">Games</h1>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 d-flex justify-content-center">
   
     <div class="card" style="width: 18rem;">
-        <img src="img/apps.21507.13663857844271189.4c1de202-3961-4c40-a0aa-7f4f1388775a.20ed7782-0eda-4f9d-b421-4cc47492edc6" class="card-img-top" alt="valorant">
+        <img src="img/MV5BZmQwMjQ2ZTUtZmM5MC00MTdkLWIxYzgtODU1NzQ4Zjg4NmMxXkEyXkFqcGc@._V1_.jpg" class="card-img-top" alt="valorant">
         </div>
       </div>
+
+      <div class="col-sm-6 d-flex justify-content-center">
 
       <div class="card" style="width: 18rem;">
         <img src="img/tjhex9ba2umc1.jpeg" class="card-img-top" alt="rocket league">
         </div>
       </div>
 
+      <div class="col-sm-6 d-flex justify-content-center">
+
       <div class="card" style="width: 18rem;">
-        <img src="img/61fbAY1DZZL.jpg" class="card-img-top" alt="league">
+        <img src="img/61fbAY1DZZL.jpg" class="card-img-top" alt="league of legends">
         </div>
       </div>
 
+      <div class="col-sm-6 d-flex justify-content-center">
+
       <div class="card" style="width: 18rem;">
-        <img src="img/MV5BMmYyNDE3NWUtOGU4ZS00M2FiLThkYTQtZjNmZDJmMmIyZTdkXkEyXkFqcGc@._V1_.jpg" class="card-img-top" alt="Overcooked">
+        <img src="img/MV5BMmYyNDE3NWUtOGU4ZS00M2FiLThkYTQtZjNmZDJmMmIyZTdkXkEyXkFqcGc@._V1_.jpg" class="card-img-top" alt="overcooked">
         </div>
       </div>
 
+      <div class="col-sm-6 d-flex justify-content-center">
+
       <div class="card" style="width: 18rem;">
-        <img src="img/MV5BMmYyNDE3NWUtOGU4ZS00M2FiLThkYTQtZjNmZDJmMmIyZTdkXkEyXkFqcGc@._V1_.jpg" class="card-img-top" alt="Splatoon 3">
+        <img src="img/some-key-art-from-the-recent-splatoon-3-side-order-v0-38479f0jbeec1.webp" class="card-img-top" alt="splatoon 3">
         </div>
       </div>
 
+      <div class="col-sm-6 d-flex justify-content-center">
+
       <div class="card" style="width: 18rem;">
-        <img src="img/MV5BMmYyNDE3NWUtOGU4ZS00M2FiLThkYTQtZjNmZDJmMmIyZTdkXkEyXkFqcGc@._V1_.jpg" class="card-img-top" alt="Super Smash Bros">
+        <img src="img/81EGkIkCWKL._AC_UF1000,1000_QL80_.jpg" class="card-img-top" alt="super smash bros">
         </div>
       </div>
 
+      <div class="col-sm-6 d-flex justify-content-center">
+
       <div class="card" style="width: 18rem;">
-        <img src="img/images.jpg class="card-img-top" alt="Street Fighter 6">
+        <img src="img/images.jpg" class="card-img-top" alt="street fighter 6">
         </div>
       </div>
 
+      <div class="col-sm-6 d-flex justify-content-center">
+
       <div class="card" style="width: 18rem;">
-        <img src="img/MV5BMmYyNDE3NWUtOGU4ZS00M2FiLThkYTQtZjNmZDJmMmIyZTdkXkEyXkFqcGc@._V1_.jpg" class="card-img-top" alt="Chess">
+        <img src="img/istockphoto-1481417210-612x612.jpg" class="card-img-top" alt="chess">
+          </div>
         </div>
       </div>
-
-
+   </div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
