fixed up a few more things, added a navbar

--- a/games.html
+++ b/games.html
@@ -19,6 +19,40 @@
 </head>
 <body>
 
+  <div class="container-fluid nav-cont">
+    <nav id="navbar-background" class="navbar fixed-top navbar-expand-md">
+      <div class="topnav container-fluid d-flex justify-content-center align-items-center">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-container"
+          aria-controls="#navbar-container" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbar-container">
+          <ul class="navbar-nav d-flex justify-content-center align-items-center">
+            <div class="skeuomorphic-buttons-navbar default-text-box me-md-1 me-lg-4 heading-size-change">
+              <a class="skeuomorphic-buttons heading-size-change" href="meetings.html">MEETINGS</a>
+            </div>
+            <div class="skeuomorphic-buttons-navbar default-text-box me-md-1 ms-md-1 ms-lg-4 me-lg-4 heading-size-change">
+              <a class="skeuomorphic-buttons heading-size-change" href="members.html">MEMBERS</a>
+            </div>
+            <div class="skeuomorphic-buttons-navbar default-text-box me-md-1 ms-md-1 ms-lg-4 me-lg-4 heading-size-change">
+              <a class="skeuomorphic-buttons heading-size-change" href="index.html">HOMEPAGE</a>
+            </div>
+            <div class="skeuomorphic-buttons-navbar default-text-box ms-md-1 ms-lg-4 heading-size-change" >
+              <a class="skeuomorphic-buttons heading-size-change" href="contact.html">CONTACTS</a>
+            </div>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <div class="container-fluid">
+    <div class="row d-flex justify-content-center align-items-center" id="Homepage">
+      <div class="col d-flex justify-content-center align-items-center">
+        <img class="esports-logo" src="IMG/TEC_Color_2 1.png" alt="Esports Club">
+      </div>
+    </div>
+  </div>
+
   <h1 style="text-align: center;">Games</h1>
 
   <div class="container">
@@ -26,56 +60,51 @@
       <div class="col-sm-6 d-flex justify-content-center">
   
     <div class="card" style="width: 18rem;">
-        <img src="img/MV5BZmQwMjQ2ZTUtZmM5MC00MTdkLWIxYzgtODU1NzQ4Zjg4NmMxXkEyXkFqcGc@._V1_.jpg" class="card-img-top" alt="valorant">
+        <img src="img/image 1.png" class="card-img-top" alt="valorant">
         </div>
       </div>
 
       <div class="col-sm-6 d-flex justify-content-center">
-
       <div class="card" style="width: 18rem;">
-        <img src="img/tjhex9ba2umc1.jpeg" class="card-img-top" alt="rocket league">
+        <img src="img/image 2.png" class="card-img-top" alt="rocket league">
         </div>
       </div>
 
       <div class="col-sm-6 d-flex justify-content-center">
-
       <div class="card" style="width: 18rem;">
-        <img src="img/61fbAY1DZZL.jpg" class="card-img-top" alt="league of legends">
+        <img src="img/image 3.png" class="card-img-top" alt="league of legends">
         </div>
       </div>
 
       <div class="col-sm-6 d-flex justify-content-center">
-
       <div class="card" style="width: 18rem;">
-        <img src="img/MV5BMmYyNDE3NWUtOGU4ZS00M2FiLThkYTQtZjNmZDJmMmIyZTdkXkEyXkFqcGc@._V1_.jpg" class="card-img-top" alt="overcooked">
+        <img src="img/image 4.png" class="card-img-top" alt="overcooked">
+        </div>
+      </div>
+
+      <h1 style="text-align: center;">Games</h1>
+
+      <div class="col-sm-6 d-flex justify-content-center">
+      <div class="card" style="width: 18rem;">
+        <img src="img/image 5.png" class="card-img-top" alt="splatoon 3">
         </div>
       </div>
 
       <div class="col-sm-6 d-flex justify-content-center">
-
       <div class="card" style="width: 18rem;">
-        <img src="img/some-key-art-from-the-recent-splatoon-3-side-order-v0-38479f0jbeec1.webp" class="card-img-top" alt="splatoon 3">
+        <img src="img/image 6.png" class="card-img-top" alt="super smash bros">
         </div>
       </div>
 
       <div class="col-sm-6 d-flex justify-content-center">
-
       <div class="card" style="width: 18rem;">
-        <img src="img/81EGkIkCWKL._AC_UF1000,1000_QL80_.jpg" class="card-img-top" alt="super smash bros">
+        <img src="img/image 7.png" class="card-img-top" alt="street fighter 6">
         </div>
       </div>
 
       <div class="col-sm-6 d-flex justify-content-center">
-
       <div class="card" style="width: 18rem;">
-        <img src="img/images.jpg" class="card-img-top" alt="street fighter 6">
-        </div>
-      </div>
-
-      <div class="col-sm-6 d-flex justify-content-center">
-
-      <div class="card" style="width: 18rem;">
-        <img src="img/istockphoto-1481417210-612x612.jpg" class="card-img-top" alt="chess">
+        <img src="img/image 8.png" class="card-img-top" alt="chess">
           </div>
         </div>
       </div>
