--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid nav-cont">
     <nav id="navbar-background" class="navbar fixed-top navbar-expand-md">
-      <div class="topnav container-fluid">
+      <div class="topnav container-fluid d-flex justify-content-center align-items-center">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-container"
           aria-controls="#navbar-container" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse d-flex justify-content-center align-items-center" id="navbar-container">
+        <div class="collapse navbar-collapse" id="navbar-container">
           <ul class="navbar-nav d-flex justify-content-center align-items-center">
             <div class="skeuomorphic-buttons-navbar default-text-box me-md-1 me-lg-4 heading-size-change">
               <a class="skeuomorphic-buttons heading-size-change" href="meetings.html">MEETINGS</a>
             </div>
-            <div class="skeuomorphic-buttons-navbar default-text-box me-1 me-md-1 ms-md-1 ms-lg-4 me-lg-4 heading-size-change">
+            <div class="skeuomorphic-buttons-navbar default-text-box me-md-1 ms-md-1 ms-lg-4 me-lg-4 heading-size-change">
               <a class="skeuomorphic-buttons heading-size-change" href="members.html">MEMBERS</a>
             </div>
-            <div class="skeuomorphic-buttons-navbar default-text-box me-1 me-md-1 ms-md-1 ms-lg-4 me-lg-4 heading-size-change">
+            <div class="skeuomorphic-buttons-navbar default-text-box me-md-1 ms-md-1 ms-lg-4 me-lg-4 heading-size-change">
               <a class="skeuomorphic-buttons heading-size-change" href="games.html">GAMES</a>
             </div>
             <div class="skeuomorphic-buttons-navbar default-text-box ms-md-1 ms-lg-4 heading-size-change" >
@@ -47,7 +47,7 @@
   <div class="container-fluid">
     <div class="row d-flex justify-content-center align-items-center" id="Homepage">
       <div class="col d-flex justify-content-center align-items-center">
-        <img class="esports-logo" src="img/TEC_Color_2 1.png" alt="Esports Club">
+        <img class="esports-logo" src="IMG/TEC_Color_2 1.png" alt="Esports Club">
       </div>
     </div>
   </div>
