--- a/games.html
+++ b/games.html
@@ -15,7 +15,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://unpkg.com/pattern.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/Games-style.css">
 </head>
 <body>
 
@@ -48,74 +48,58 @@
   <div class="container-fluid">
     <div class="row d-flex justify-content-center align-items-center" id="Homepage">
       <div class="col d-flex justify-content-center align-items-center">
-        <img class="esports-logo" src="IMG/TEC_Color_2 1.png" alt="Esports Club">
+        <img class="esports-logo" src="IMG/TEC_Color_2 1.png" alt="Esports Club" height="180">
       </div>
     </div>
   </div>
 
-  <h1 style="text-align: center;">Games</h1>
-
   <div class="container">
     <div class="row">
-      <div class="col-sm-6 d-flex justify-content-center">
-  
-    <div class="card" style="width: 18rem;">
-        <img src="img/image 1.png" class="card-img-top" alt="valorant">
+      <h1 style="text-align: center;" class="text-color-2 title-font">Games</h1>
+      <div class="col-sm-3 d-flex justify-content-center">
+        <div class="col" style="width: 18rem;">
+          <img src="img/image 1.png." alt="valorant" width="284" height="468">
         </div>
       </div>
-
-      <div class="col-sm-6 d-flex justify-content-center">
-      <div class="card" style="width: 18rem;">
-        <img src="img/image 2.png" class="card-img-top" alt="rocket league">
+      <div class="col-sm-3 d-flex justify-content-center">
+        <div class="col" style="width: 18rem;">
+          <img src="img/image 2.png" alt="rocket league" width="284" height="468">
         </div>
       </div>
-
-      <div class="col-sm-6 d-flex justify-content-center">
-      <div class="card" style="width: 18rem;">
-        <img src="img/image 3.png" class="card-img-top" alt="league of legends">
+      <div class="col-sm-3 d-flex justify-content-center">
+        <div class="col" style="width: 18rem;">
+          <img src="img/image 3.png" alt="league of legends" width="284" height="468">
         </div>
       </div>
-
-      <div class="col-sm-6 d-flex justify-content-center">
-      <div class="card" style="width: 18rem;">
-        <img src="img/image 4.png" class="card-img-top" alt="overcooked">
+      <div class="col-sm-3 d-flex justify-content-center">
+        <div class="col" style="width: 18rem;">
+          <img src="img/image 4.png" alt="overcooked" width="284" height="468">
         </div>
       </div>
-
-      <h1 style="text-align: center;">Games</h1>
-
-      <div class="col-sm-6 d-flex justify-content-center">
-      <div class="card" style="width: 18rem;">
-        <img src="img/image 5.png" class="card-img-top" alt="splatoon 3">
+    </div>
+    <div class="row">
+      <div class="col-sm-3 d-flex justify-content-center">
+        <div class="col" style="width: 18rem;">
+          <img src="img/image 5.png" alt="splatoon 3" width="284" height="468">
         </div>
       </div>
-
-      <div class="col-sm-6 d-flex justify-content-center">
-      <div class="card" style="width: 18rem;">
-        <img src="img/image 6.png" class="card-img-top" alt="super smash bros">
+      <div class="col-sm-3 d-flex justify-content-center">
+        <div class="col" style="width: 18rem;">
+          <img src="img/image 6.png" alt="super smash bros" width="284" height="468">
         </div>
       </div>
-
-      <div class="col-sm-6 d-flex justify-content-center">
-      <div class="card" style="width: 18rem;">
-        <img src="img/image 7.png" class="card-img-top" alt="street fighter 6">
+      <div class="col-sm-3 d-flex justify-content-center">
+        <div class="col" style="width: 18rem;">
+          <img src="img/image 7.png" alt="street fighter 6" width="284" height="468">
         </div>
       </div>
-
-      <div class="col-sm-6 d-flex justify-content-center">
-      <div class="card" style="width: 18rem;">
-        <img src="img/image 8.png" class="card-img-top" alt="chess">
-          </div>
+      <div class="col-sm-3 d-flex justify-content-center">
+        <div class="col" style="width: 18rem;">
+          <img src="img/image 8.png" alt="chess" width="284" height="468">
         </div>
       </div>
-   </div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
